src/car_hunter/main/default/objects/Car__c/Car__c.object-meta.xml
<CustomObject>
    <label>Car</label>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>