src/car_hunter/main/default/objects/Car__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasoline</fullName>
                <default>true</default>
                <label>Gasoline</label>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>