src/car_hunter/main/default/objects/Car__c/fields/NumberSeats__c.field-meta.xml
<CustomField>
    <fullName>NumberSeats__c</fullName>
    <label>Number of Seats</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>