src/car_hunter/main/default/objects/Car__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <label>Transmission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
            <value>
                <fullName>AWD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>